# Mestrado-FluidSimulation-2020

./: Problemas - notas.txt  README.md
Gvdb_teste/: .gitignore  README.md
Gvdb_teste/src/: CMakeLists.txt  Point.h  main.cpp
Gvdb_teste/toolkits/gvdb/: cuda_gvdb_copydata.ptx  cuda_gvdb_module.ptx  gvdb.exp
Octree/: README.md
Octree/src/: CMakeLists.txt  HashMap.cpp  HashMap.h  Octree.cpp  Octree.h  Point.cpp  Point.h  main.cpp  mainOld_copy.cpp
Papers/: Boundary_Handling_and_Adaptive_Time-stepping_for_P.txt  Predictive-corrective_incompressible_SPH.txt  Survey_SPH.txt  cgf.14090.txt  pbf_sig_preprint.TXT
Relatorio/: 2020-PlanoDeTrabalhos.docx  Notas
Relatorio/Apresentação/: Notas
Relatorio/Graphs/: CollisionForces.drawio  HashVsMorton.drawio  OurMethod.drawio  OurMethodProblem.drawio  Pipeline.drawio  ghostParticles.drawio  ghostSample.drawio  kernelBig.drawio  normal.drawio  problemHash.drawio  radixSort.drawio  zorder.drawio
Relatorio/Python/: MortonVsHash-Total Vs Vizinhos.ipynb  MortonVsHash-Vizinhos-Normal-Tras-dist-entre-particulas.ipynb  MortonVsHash-Vizinhos-Normal.ipynb  MortonVsHash-Vizinhos-Tras-dist-entre-particulas - Force.ipynb  MortonVsHash-Vizinhos.ipynb  MortonVsHash.ipynb
Relatorio/Python/.ipynb_checkpoints/: MortonVsHash-Total Vs Vizinhos-checkpoint.ipynb  MortonVsHash-checkpoint.ipynb
Simulation/CPU/Octree/src/: Doxyfile  HashMap.cpp  HashMap.h  Octree.h  Point.cpp  Point.h  main.cpp
Simulation/CPU/OpenglCUDA/: README.md
Simulation/CPU/OpenglCUDA/src/: CMakeLists.txt  init.comp  main.cpp
Simulation/GPU/: FicheirosNau.rar  log.txt  log_antes.txt  proj.mlib.xml  proj.xml
Simulation/GPU/ArrayOfStructs/: log2.txt  log_AdjMat.txt  log_Com_VEC_WORKGROUP_25.txt  proj.mlib.xml  proj.xml
Simulation/GPU/ArrayOfStructs/shaders/: billboard.geom  computeOffsets.comp  computeTemps.comp  density_pressure.comp  force.comp  init.comp  integrate.comp  particlePos.frag  populate.comp  quad.vert  updateHash.comp
Simulation/GPU/StructOfArrays/: proj.mlib.xml
Simulation/GPU/StructOfArrays - Hash/: proj.xml  simulation.mlib
Simulation/GPU/StructOfArrays - Hash - Old Sort/: README.md  imgui.ini  proj.xml  simulation.mlib
Simulation/GPU/StructOfArrays - Morton Code/: proj.mlib.xml  proj.xml  rendering.mlib  simulation.mlib  voxel.xml
Simulation/GPU/StructOfArrays - Morton Code - Ball/: proj.xml  voxel.xml
Simulation/GPU/StructOfArrays - Morton Code - Ball - Tap/: proj.xml  voxel.xml
Simulation/GPU/StructOfArrays - Morton Code - Ball - Tap/materials/: simulation.mlib  voxel.mlib
Simulation/GPU/StructOfArrays - Morton Code - Ball - Tap/templates/: simattributes.xml  simulationInterface.xml  voxelproj.xml
Simulation/GPU/StructOfArrays - Morton Code - Ball/materials/: simulation.mlib
Simulation/GPU/StructOfArrays - Morton Code - Ball/old/: simulation.mlib
Simulation/GPU/StructOfArrays - Morton Code - Ball/renderStuff/: renderScene.mlib
Simulation/GPU/StructOfArrays - Morton Code - Ball/templates/: oldRender.xml  simattributes.xml  simulationInterface.xml
Simulation/GPU/StructOfArrays - Morton Code - Dam Break/: .gitignore  README.md  proj.xml
Simulation/GPU/StructOfArrays - Morton Code - Dam Break/materials/: simulation.mlib
Simulation/GPU/StructOfArrays - Morton Code - Dam Break/scripts/: waves.lua
Simulation/GPU/StructOfArrays - Morton Code - Dam Break/templates/: simattributes.xml  simpipeline.xml
Simulation/GPU/StructOfArrays - Morton Code - FULLCUDA/: proj.xml  simulation.mlib
Simulation/GPU/StructOfArrays - Morton Code - Multiple Densities/: proj.xml  projBuilder.py  voxel.xml
Simulation/GPU/StructOfArrays - Morton Code - Multiple Densities/materials/: rendering.mlib  simulation.mlib
Simulation/GPU/StructOfArrays - Morton Code - Multiple Densities/renderStuff/: renderObjects.xml
Simulation/GPU/StructOfArrays - Morton Code - Multiple Densities/templates/: simattributes.xml  simulationInterface.xml
Simulation/GPU/StructOfArrays - Morton Code - PCISPH/: proj.xml  simulation.mlib
Simulation/GPU/StructOfArrays - Morton Code - PCISPH/scripts/: pcisph.lua  pipelines.lua  waves.lua
Simulation/GPU/StructOfArrays - Morton Code - Pillars/: proj.xml  simulation.mlib  voxel.xml
Simulation/GPU/StructOfArrays - Morton Code - Pillars/materials/: voxel.mlib
Simulation/GPU/StructOfArrays - Morton Code - Pillars/old/: proj.xml
Simulation/GPU/StructOfArrays - Morton Code - Pillars/templates/: simattributes.xml  simulationInterface.xml
Simulation/GPU/StructOfArrays - Morton Code - Plataforms/: proj.xml  voxel.xml
Simulation/GPU/StructOfArrays - Morton Code - Plataforms/PluginsForNauNewSim/: CMakeLists.txt
Simulation/GPU/StructOfArrays - Morton Code - Plataforms/templates/: oldRender.xml  simattributes.xml  simulationInterface.xml
Simulation/GPU/StructOfArrays - Morton Code - River/: proj.xml  projBuilder.py  simulation.mlib  voxel.xml
Simulation/GPU/StructOfArrays - Morton Code - River/PluginsForNauNewSim/passCudaHash/: CMakeLists.txt
Simulation/GPU/StructOfArrays - Morton Code - River/materials/: simulation.mlib  voxel.mlib
Simulation/GPU/StructOfArrays - Morton Code - Tap/: proj.xml  projBuilder.py  simulation.mlib  voxel.xml
Simulation/GPU/StructOfArrays - Morton Code/PluginsForNau/passCuda/: CMakeLists.txt  INSTALL.vcxproj  cmake_install.cmake  nauPassCuda.vcxproj.filters
Simulation/GPU/StructOfArrays - Morton Code/PluginsForNau/passCuda/src/: mySort.cu  mySort.h  passPICuda.cpp
Simulation/GPU/StructOfArrays - Morton Code/PluginsForNau/passSort/: CMakeLists.txt
Simulation/GPU/StructOfArrays - Morton Code/PluginsForNau/passSort/src/: passSort.cpp  passSort.h
Simulation/GPU/StructOfArrays - best/: hashSizeFile.txt  log_WithAdjMat.txt  log_arrays_of_structs.txt  log_meioMilhao_32Size.txt  log_noAdjMat.txt  log_struct_of_arrays.txt  positionFile.txt  proj.mlib.xml  proj.xml  simulation.mlib
Simulation/GPU/shaders/: billboard.frag  billboard.vert  computeOffsets.comp  computeTemps.comp  density_pressure.comp  force.comp  init.comp  integrate.comp  updateHash.comp  zeroBuffers.comp
(+151 files in other folders)
